# pythonnet

./: .gitignore  CHANGELOG.md  Dir.props  Directory.Build.props  pyproject.toml  pythonnet.sln  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  monthly-preview.yml
Python.Console/: console.sln
Python.Runtime/: CustomMarshaler.cs  Python.Runtime.csproj  converter.cs  exceptions.cs  importhook.cs  interop.cs  moduleobject.cs  pythonengine.cs  runtime.cs  typemanager.cs
Python.Runtime/polyfill/: ReflectionPolyfills.cs
Python.Test.Embed/: Python.Test.Embed.csproj
pythonnet/: .gitignore  clr.py
src/clrmodule/: clrmodule.csproj
src/console/: Console.csproj
src/embed_tests/: Python.EmbeddingTest.csproj
src/runtime/: .gitignore  CustomMarshaler.cs  Python.Runtime.csproj  assemblymanager.cs  exceptions.cs  extensiontype.cs  importhook.cs  moduleobject.cs  pythonengine.cs  runtime.cs
src/testing/: Python.Test.csproj
src/tests/: conftest.py
tests/embed_tests/: Python.EmbeddingTest.csproj
tools/: build.py  configure.py
