[metadata]
name = pythonnet
version = file: VERSION

description = .NET and Mono integration for Python
long_description = file: README.rst

url = https://pythonnet.github.io/
license = MIT

author = The Contributors of the Python.NET Project
author_email = pythonnet@python.org

classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: C#
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X

[options]
zip_safe = False
packages =
	pythonnet
	pythonnet.find_libpython
py_modules =
	clr
install_requires =
	clr_loader